--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -7,6 +7,7 @@
 @import './player.scss';
 @import './song.scss';
 @import './library.scss';
+@import './nav.scss';
 body{
     font-family: 'Lato', sans-serif;
 }
