--- a/src/styles/library.scss
+++ b/src/styles/library.scss
@@ -6,6 +6,9 @@
     height: 100% ;
     box-shadow: 2px 2px 50px gray;
     overflow: scroll;
+    transform: translateX(-100%);
+    transition: all 0.5s ease;
+    z-index: 50;
 }
 .library-songs{
     display: flex;
@@ -54,3 +57,10 @@
     background-clip: content-box;
 }
 
+.selected{
+    background: violet;
+}
+
+.active-library{
+    transform: translateX(0);
+}
