--- a/src/styles/player.scss
+++ b/src/styles/player.scss
@@ -7,10 +7,34 @@
 }
 .time-control{
   width: 50%;
-
   display: flex;
+  align-items: center;
   input{
     width: 100%;
+    --webkit-appearance: none;
+    appearance: none;
+    background: transparent;
+    z-index: 50;
+    position: relative;
+    &:focus{
+      outline: none;
+    }
+    &::-webkit-slider-thumb{
+      -webkit-appearance: none;
+      appearance: none;
+      width: 1rem;
+      height: 1rem;
+      background: rgb(31, 140, 104);
+      cursor: pointer;
+    }
+    &::-moz-range-thumb{
+      width: 1rem;
+      height: 1rem;
+      background: rgb(27, 93, 71);
+      cursor: pointer;
+    }
+    
+
   }
   p{
     padding:1rem;
@@ -25,4 +49,23 @@
     svg{
         cursor: pointer;
     }
+}
+
+.track{
+  position: relative;
+  width: 100%;
+  height: 1rem;
+  border-radius: 0.5rem;
+  background: rgb(222, 222, 225);
+  overflow: hidden;
+}
+.animate-track{
+
+  width: 100%;
+  height: 1rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateX(-100%);
+  pointer-events: none;
 }
